# idtech

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
assets/: skins.wad
src/: bsp_explorer.cpp  bsp_explorer.hpp  bsp_loader.cpp  bsp_loader.hpp  bsp_quake1.cpp  bsp_quake1.hpp  bsp_renderer.cpp  bsp_renderer.hpp  bsp_types.hpp  example.cpp  lightmap_packer.hpp  math_types.hpp  wad.cpp  wad.hpp
tests/: lightmap_packer_test.cpp  loader_test.cpp  wad_test.cpp
